--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 .env
 build
 dist
-app/predacons.egg-info
+app/predacons_gui.egg-info
 app/__pycache__
 app/venv
-app/predacons/__pycache__
-app/predacons/venv
-app/predacons/src/__pycache__
-app/predacons/src/venv
+app/predacons_gui/__pycache__
+app/predacons_gui/venv
+app/predacons_gui/src/__pycache__
+app/predacons_gui/src/venv
 myenv
